<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#cccccc"
	    android:orientation="horizontal"
	    android:paddingBottom="7dp"
	    android:paddingTop="7dp" >

	    <TextView
	        android:id="@+id/time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:paddingLeft="19dp"
	        android:paddingRight="20dp"
	        android:paddingTop="10dp"
	        android:text="@string/time"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/alarm_clock"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="10dp"
	        android:text="@string/alarm_clock"
	        android:textSize="18sp" />
	    <TextView 
	        android:id="@+id/stopwatch"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="10dp"
	        android:text="@string/stop_watch"
	        android:textSize="18sp"/>

	    <TextView
	        android:id="@+id/calculator"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="18dp"
	        android:paddingTop="10dp"
	        android:text="@string/calculator"
	        android:textSize="18sp" />

	</LinearLayout>

	<android.support.v4.view.ViewPager
	    android:id="@+id/viewpager"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
   
	</android.support.v4.view.ViewPager>

</LinearLayout>
