<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fffddd" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:paddingBottom="5dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingTop="5dp" >

        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/set_alarm"
            android:textColor="#ffffff"
            android:textSize="18sp" >

        </TextView>    
        
            
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:text="@string/confirm"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TimePicker 
	        android:id="@+id/time_pick"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
        
    </LinearLayout>
  
	<ListView
	        android:layout_width="match_parent"	    	
	    	android:layout_height="wrap_content"
	        android:smoothScrollbar="true"
	        android:drawSelectorOnTop="false"
	    	android:id="@+id/clock_show_list">
	        
	</ListView>  
</LinearLayout>
